manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pronouns
spec:
  selector:
    matchLabels:
      app: pronouns
  replicas: 2
  template:
    metadata:
      labels:
        app: pronouns
    spec:
      containers:
      - name: web
        image: reg.xeiaso.net/xe/pronouns
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /.within/health
            port: 3000
          initialDelaySeconds: 3
          periodSeconds: 3
        resources:
          limits:
            cpu: "250m"
            memory: "256Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
