manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pronouns
spec:
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: pronouns
