manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pronouns
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - pronouns.within.lgbt
      secretName: pronouns-within-lgbt-tls
  rules:
  - host: pronouns.within.lgbt
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pronouns
            port:
              number: 80
